Added sales analysis by day of the week and also by month

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 108,
    "id": "7b13ef00",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 109,
    "id": "c3319c46",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 110,
    "id": "11c6dc57",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 111,
    "id": "86fe0696",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 116,
    "id": "030f070d",
    "metadata": {},
    "outputs": [
@@ -141,38 +141,15 @@
      "text": [
       "\n",
       "Number of missing values: 0\n",
-      "Number of duplicated values: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"\\nNumber of missing values: {df.isnull().sum().sum()}\")\n",
-    "print(f\"Number of duplicated values: {df.duplicated().sum()}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d4e9539",
-   "metadata": {},
-   "source": [
-    "## Date continuity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "3ffe23be",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Number of duplicated values: 0\n",
       "No date gaps detected - continuous daily data\n"
      ]
     }
    ],
    "source": [
+    "print(f\"\\nNumber of missing values: {df.isnull().sum().sum()}\")\n",
+    "print(f\"Number of duplicated values: {df.duplicated().sum()}\")\n",
+    "\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
     "df_sorted = df.sort_values('Date')\n",
     "date_diff = df_sorted['Date'].diff()\n",
@@ -188,6 +165,110 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6b0fd22",
+   "metadata": {},
+   "source": [
+    "## Sales analysis by day-of-the-week and the month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "0084ea2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique months in dataset: 25\n",
+      "\n",
+      "Records per day of week:\n",
+      "Day of Week\n",
+      "Monday       10500\n",
+      "Tuesday      10400\n",
+      "Wednesday    10400\n",
+      "Thursday     10400\n",
+      "Friday       10400\n",
+      "Saturday     10500\n",
+      "Sunday       10500\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Records per month:\n",
+      "Month\n",
+      "January      6300\n",
+      "February     5600\n",
+      "March        6200\n",
+      "April        6000\n",
+      "May          6200\n",
+      "June         6000\n",
+      "July         6200\n",
+      "August       6200\n",
+      "September    6000\n",
+      "October      6200\n",
+      "November     6000\n",
+      "December     6200\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Total and average sales by day of week:\n",
+      "                 sum    mean\n",
+      "Day of Week                 \n",
+      "Monday       1418494  135.09\n",
+      "Tuesday      1428000  137.31\n",
+      "Wednesday    1420797  136.62\n",
+      "Thursday     1427732  137.28\n",
+      "Friday       1423255  136.85\n",
+      "Saturday     1420802  135.31\n",
+      "Sunday       1436502  136.81\n",
+      "\n",
+      "Total and average sales by month:\n",
+      "              sum    mean\n",
+      "Month                    \n",
+      "January    856590  135.97\n",
+      "February   776220  138.61\n",
+      "March      842595  135.90\n",
+      "April      808457  134.74\n",
+      "May        833472  134.43\n",
+      "June       821150  136.86\n",
+      "July       864547  139.44\n",
+      "August     841417  135.71\n",
+      "September  816971  136.16\n",
+      "October    852509  137.50\n",
+      "November   830661  138.44\n",
+      "December   830993  134.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Day of Week'] = df['Date'].dt.day_name()\n",
+    "df['Month'] = df['Date'].dt.month_name()\n",
+    "\n",
+    "day_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "month_order = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
+    "\n",
+    "print(\"Unique months in dataset:\", df['Date'].dt.to_period('M').nunique())\n",
+    "print(\"\\nRecords per day of week:\")\n",
+    "# Reorder by actual day of week\n",
+    "print(df['Day of Week'].value_counts().reindex(day_order))\n",
+    "print(\"\\nRecords per month:\")\n",
+    "# Reorder by actual month order\n",
+    "print(df['Month'].value_counts().reindex(month_order))\n",
+    "\n",
+    "print(\"\\nTotal and average sales by day of week:\")\n",
+    "dow_sales = df.groupby('Day of Week')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
+    "# Reorder by actual day of week\n",
+    "dow_sales = dow_sales.reindex(day_order)\n",
+    "print(dow_sales)\n",
+    "\n",
+    "print(\"\\nTotal and average sales by month:\")  \n",
+    "month_sales = df.groupby('Month')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
+    "# Reorder by actual month order\n",
+    "month_sales = month_sales.reindex(month_order)\n",
+    "print(month_sales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb010bc7",
    "metadata": {},
    "source": [
@@ -196,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 124,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -238,6 +319,7 @@
        "      <th>Seasonality</th>\n",
        "      <th>Day_of_Week</th>\n",
        "      <th>Month</th>\n",
+       "      <th>Day of Week</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -260,6 +342,7 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -280,6 +363,7 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -300,6 +384,7 @@
        "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -320,6 +405,7 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -340,6 +426,7 @@
        "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -367,15 +454,15 @@
        "3            Cloudy                  1               34.74      Autumn   \n",
        "4             Sunny                  0               68.95      Summer   \n",
        "\n",
-       "  Day_of_Week    Month  \n",
-       "0    Saturday  January  \n",
-       "1    Saturday  January  \n",
-       "2    Saturday  January  \n",
-       "3    Saturday  January  \n",
-       "4    Saturday  January  "
+       "  Day_of_Week    Month Day of Week  \n",
+       "0    Saturday  January    Saturday  \n",
+       "1    Saturday  January    Saturday  \n",
+       "2    Saturday  January    Saturday  \n",
+       "3    Saturday  January    Saturday  \n",
+       "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
