Added external factor analysis for weather condition and holliday/promotion

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 128,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
     "day_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
     "month_order = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
     "\n",
-    "print(\"Unique months in dataset:\", df['Date'].dt.to_period('M').nunique())\n",
+    "print(f\"Unique months in dataset: {df['Date'].dt.to_period('M').nunique()}\")\n",
     "print(\"\\nRecords per day of week:\")\n",
     "# Reorder by actual day of week\n",
     "print(df['Day of Week'].value_counts().reindex(day_order))\n",
@@ -269,6 +269,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e915a121",
+   "metadata": {},
+   "source": [
+    "## External Factor Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "e8d80f3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weather condition occurrence count:\n",
+      "Weather Condition\n",
+      "Sunny     18290\n",
+      "Rainy     18278\n",
+      "Snowy     18272\n",
+      "Cloudy    18260\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Average sales by weather condition:\n",
+      "                     mean     std\n",
+      "Weather Condition                \n",
+      "Cloudy             136.76  108.33\n",
+      "Rainy              135.16  107.92\n",
+      "Snowy              135.91  109.38\n",
+      "Sunny              138.03  110.02\n",
+      "\n",
+      "Holiday/Promotion impact:\n",
+      "                   count    mean     std\n",
+      "Holiday/Promotion                       \n",
+      "0                  36747  136.51  109.28\n",
+      "1                  36353  136.42  108.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"Weather condition occurrence count:\")\n",
+    "print(df['Weather Condition'].value_counts())\n",
+    "\n",
+    "print(\"\\nAverage sales by weather condition:\")\n",
+    "weather_impact = df.groupby('Weather Condition')['Units Sold'].agg(['mean', 'std']).round(2)\n",
+    "print(weather_impact)\n",
+    "\n",
+    "\n",
+    "holiday_col = [col for col in df.columns if 'holiday' in col.lower() or 'promotion' in col.lower()]\n",
+    "if holiday_col:\n",
+    "    col_name = holiday_col[0]\n",
+    "    print(f\"\\n{col_name} impact:\")\n",
+    "    print(df.groupby(col_name)['Units Sold'].agg(['count', 'mean', 'std']).round(2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb010bc7",
    "metadata": {},
    "source": [
@@ -277,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 131,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -462,7 +521,7 @@
        "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
