--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -168,12 +168,12 @@
    "id": "c6b0fd22",
    "metadata": {},
    "source": [
-    "## Sales analysis by day-of-the-week and the month"
+    "## Sales analysis by day-of-the-week"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 132,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique months in dataset: 25\n",
+      "Unique weeks in dataset: 106\n",
       "\n",
       "Records per day of week:\n",
       "Day of Week\n",
@@ -193,6 +193,55 @@
       "Saturday     10500\n",
       "Sunday       10500\n",
       "Name: count, dtype: int64\n",
+      "\n",
+      "Total and average sales by day of week:\n",
+      "                 sum    mean\n",
+      "Day of Week                 \n",
+      "Monday       1418494  135.09\n",
+      "Tuesday      1428000  137.31\n",
+      "Wednesday    1420797  136.62\n",
+      "Thursday     1427732  137.28\n",
+      "Friday       1423255  136.85\n",
+      "Saturday     1420802  135.31\n",
+      "Sunday       1436502  136.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Day of Week'] = df['Date'].dt.day_name()\n",
+    "day_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "\n",
+    "print(f\"Unique weeks in dataset: {df['Date'].dt.to_period('W').nunique()}\")\n",
+    "print(\"\\nRecords per day of week:\")\n",
+    "# Reorder by actual day of week\n",
+    "print(df['Day of Week'].value_counts().reindex(day_order))\n",
+    "\n",
+    "print(\"\\nTotal and average sales by day of week:\")\n",
+    "dow_sales = df.groupby('Day of Week')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
+    "# Reorder by actual day of week\n",
+    "dow_sales = dow_sales.reindex(day_order)\n",
+    "print(dow_sales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d0b48be",
+   "metadata": {},
+   "source": [
+    "## Sales analysis by month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "278323c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique months in dataset: 25\n",
       "\n",
       "Records per month:\n",
       "Month\n",
@@ -209,17 +258,6 @@
       "November     6000\n",
       "December     6200\n",
       "Name: count, dtype: int64\n",
-      "\n",
-      "Total and average sales by day of week:\n",
-      "                 sum    mean\n",
-      "Day of Week                 \n",
-      "Monday       1418494  135.09\n",
-      "Tuesday      1428000  137.31\n",
-      "Wednesday    1420797  136.62\n",
-      "Thursday     1427732  137.28\n",
-      "Friday       1423255  136.85\n",
-      "Saturday     1420802  135.31\n",
-      "Sunday       1436502  136.81\n",
       "\n",
       "Total and average sales by month:\n",
       "              sum    mean\n",
@@ -240,31 +278,20 @@
     }
    ],
    "source": [
-    "df['Day of Week'] = df['Date'].dt.day_name()\n",
     "df['Month'] = df['Date'].dt.month_name()\n",
-    "\n",
-    "day_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
     "month_order = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
     "\n",
     "print(f\"Unique months in dataset: {df['Date'].dt.to_period('M').nunique()}\")\n",
-    "print(\"\\nRecords per day of week:\")\n",
-    "# Reorder by actual day of week\n",
-    "print(df['Day of Week'].value_counts().reindex(day_order))\n",
+    "\n",
     "print(\"\\nRecords per month:\")\n",
     "# Reorder by actual month order\n",
     "print(df['Month'].value_counts().reindex(month_order))\n",
-    "\n",
-    "print(\"\\nTotal and average sales by day of week:\")\n",
-    "dow_sales = df.groupby('Day of Week')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
-    "# Reorder by actual day of week\n",
-    "dow_sales = dow_sales.reindex(day_order)\n",
-    "print(dow_sales)\n",
     "\n",
     "print(\"\\nTotal and average sales by month:\")  \n",
     "month_sales = df.groupby('Month')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
     "# Reorder by actual month order\n",
     "month_sales = month_sales.reindex(month_order)\n",
-    "print(month_sales)"
+    "print(month_sales)\n"
    ]
   },
   {
@@ -277,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 134,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -336,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 135,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -521,7 +548,7 @@
        "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
