Added individual store analysis

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -299,12 +299,12 @@
    "id": "e915a121",
    "metadata": {},
    "source": [
-    "## External Factor Analysis"
+    "## External factor analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 136,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -355,6 +355,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e48e132b",
+   "metadata": {},
+   "source": [
+    "## Store analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "ec31f714",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 performing stores (by total sales):\n",
+      "              sum    mean\n",
+      "Store ID                 \n",
+      "S003      2022696  138.35\n",
+      "S005      2010176  137.49\n",
+      "S002      1987715  135.96\n",
+      "S004      1979245  135.38\n",
+      "S001      1975750  135.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Top 10 performing stores (by total sales):\")\n",
+    "store_performance = df.groupby('Store ID')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
+    "store_performance = store_performance.sort_values('sum', ascending=False)\n",
+    "print(store_performance.head(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb010bc7",
    "metadata": {},
    "source": [
@@ -363,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 140,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -548,7 +584,7 @@
        "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
