Added category analysis and added std to store analysis

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 145,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -372,21 +372,56 @@
      "output_type": "stream",
      "text": [
       "Top 10 performing stores (by total sales):\n",
-      "              sum    mean\n",
-      "Store ID                 \n",
-      "S003      2022696  138.35\n",
-      "S005      2010176  137.49\n",
-      "S002      1987715  135.96\n",
-      "S004      1979245  135.38\n",
-      "S001      1975750  135.14\n"
+      "              sum    mean     std\n",
+      "Store ID                         \n",
+      "S003      2022696  138.35  109.78\n",
+      "S005      2010176  137.49  109.51\n",
+      "S002      1987715  135.96  108.93\n",
+      "S004      1979245  135.38  107.64\n",
+      "S001      1975750  135.14  108.71\n"
      ]
     }
    ],
    "source": [
     "print(\"Top 10 performing stores (by total sales):\")\n",
-    "store_performance = df.groupby('Store ID')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
+    "store_performance = df.groupby('Store ID')['Units Sold'].agg(['sum', 'mean', 'std']).round(2)\n",
     "store_performance = store_performance.sort_values('sum', ascending=False)\n",
     "print(store_performance.head(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49f5b478",
+   "metadata": {},
+   "source": [
+    "## Category analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "653d5658",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category performance (by total sales):\n",
+      "                 sum    mean     std\n",
+      "Category                            \n",
+      "Furniture    2025017  137.77  110.02\n",
+      "Groceries    2000482  136.92  109.26\n",
+      "Clothing     1999166  136.69  108.42\n",
+      "Toys         1990485  135.93  108.43\n",
+      "Electronics  1960432  135.01  108.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Category performance (by total sales):\")\n",
+    "category_performance = df.groupby('Category')['Units Sold'].agg(['sum', 'mean', 'std']).round(2)\n",
+    "print(category_performance.sort_values('sum', ascending=False))"
    ]
   },
   {
@@ -399,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 147,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -584,7 +619,7 @@
        "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
