Added regional analysis section that tracks performance for each region

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -426,6 +426,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0566bbd",
+   "metadata": {},
+   "source": [
+    "## Regional Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "bb85aca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            sum    mean  count\n",
+      "Region                        \n",
+      "East    2511265  136.86  18349\n",
+      "South   2507799  137.06  18297\n",
+      "North   2484966  136.33  18228\n",
+      "West    2471552  135.61  18226\n"
+     ]
+    }
+   ],
+   "source": [
+    "region_performance = df.groupby('Region')['Units Sold'].agg(['sum', 'mean', 'count']).round(2)\n",
+    "print(region_performance.sort_values('sum', ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb010bc7",
    "metadata": {},
    "source": [
@@ -434,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 150,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -619,7 +651,7 @@
        "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
