Added outlier check in data quality analysis

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 167,
    "id": "030f070d",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,8 @@
       "\n",
       "Number of missing values: 0\n",
       "Number of duplicated values: 0\n",
-      "No date gaps detected - continuous daily data\n"
+      "No date gaps detected - continuous daily data\n",
+      "Statistical outliers: 715 (0.98%)\n"
      ]
     }
    ],
@@ -160,7 +161,13 @@
     "    print(\"Largest gaps:\")\n",
     "    print(gaps.sort_values(ascending=False).head())\n",
     "else:\n",
-    "    print(\"No date gaps detected - continuous daily data\")"
+    "    print(\"No date gaps detected - continuous daily data\")\n",
+    "\n",
+    "Q1 = df['Units Sold'].quantile(0.25)\n",
+    "Q3 = df['Units Sold'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "outliers = df[(df['Units Sold'] < Q1 - 1.5*IQR) | (df['Units Sold'] > Q3 + 1.5*IQR)]\n",
+    "print(f\"Statistical outliers: {len(outliers):,} ({len(outliers)/len(df)*100:.2f}%)\")"
    ]
   },
   {
@@ -173,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 168,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -233,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 169,
    "id": "278323c6",
    "metadata": {},
    "outputs": [
@@ -304,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 170,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -363,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 171,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -399,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 172,
    "id": "653d5658",
    "metadata": {},
    "outputs": [
@@ -434,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 173,
    "id": "bb85aca1",
    "metadata": {},
    "outputs": [
@@ -466,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 174,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -651,7 +658,7 @@
        "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
