Added inventory and stockout analysis

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -465,6 +465,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19f2b89b",
+   "metadata": {},
+   "source": [
+    "## Inventory Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "19d05b32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventory Level Statistics:\n",
+      "count    73100.00\n",
+      "mean       274.47\n",
+      "std        129.95\n",
+      "min         50.00\n",
+      "25%        162.00\n",
+      "50%        273.00\n",
+      "75%        387.00\n",
+      "max        500.00\n",
+      "Name: Inventory Level, dtype: float64\n",
+      "\n",
+      "Stock-out instances: 0 (0.00%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Inventory Level Statistics:\")\n",
+    "print(df['Inventory Level'].describe().round(2))\n",
+    "    \n",
+    "# Stock-out analysis\n",
+    "stockouts = df[df['Inventory Level'] == 0]\n",
+    "print(f\"\\nStock-out instances: {len(stockouts):,} ({len(stockouts)/len(df)*100:.2f}%)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb010bc7",
    "metadata": {},
    "source": [
@@ -473,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 181,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -658,7 +700,7 @@
        "4    Saturday  January    Saturday  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
