--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 254,
    "id": "c3319c46",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 255,
    "id": "11c6dc57",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 256,
    "id": "86fe0696",
    "metadata": {},
    "outputs": [
@@ -76,6 +76,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Date range: 2022-01-01 to 2024-01-01\n",
+      "Number of stores: 5\n",
+      "Number of products: 20\n",
+      "Product categories: ['Groceries' 'Toys' 'Electronics' 'Furniture' 'Clothing']\n",
+      "Regions: ['North' 'South' 'West' 'East']\n",
+      "Weather conditions: ['Rainy' 'Sunny' 'Cloudy' 'Snowy']\n",
+      "Seasons: ['Autumn' 'Summer' 'Winter' 'Spring']\n",
+      "Total sales volume: 9,975,582 units\n",
+      "Average daily sales: 136.5 units per store-product\n",
       "Dataset shape: (73100, 15)\n",
       "Memory usage: 8.37 MB\n",
       "Column types:\n",
@@ -94,31 +103,23 @@
       "Holiday/Promotion       int64\n",
       "Competitor Pricing    float64\n",
       "Seasonality            object\n",
-      "dtype: object\n",
-      "\n",
-      "\n",
-      "Date range: 2022-01-01 to 2024-01-01\n",
-      "Number of stores: 5\n",
-      "Number of products: 20\n",
-      "Product categories: ['Groceries' 'Toys' 'Electronics' 'Furniture' 'Clothing']\n",
-      "Regions: ['North' 'South' 'West' 'East']\n",
-      "Weather conditions: ['Rainy' 'Sunny' 'Cloudy' 'Snowy']\n",
-      "Seasons: ['Autumn' 'Summer' 'Winter' 'Spring']\n"
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Dataset shape: {df.shape}\")\n",
-    "print(f\"Memory usage: {df.memory_usage().sum()/1024**2:.2f} MB\")\n",
-    "print(f\"Column types:\\n{df.dtypes}\\n\\n\")\n",
     "print(f\"Date range: {df['Date'].min()} to {df['Date'].max()}\")\n",
     "print(f\"Number of stores: {df['Store ID'].nunique()}\")\n",
     "print(f\"Number of products: {df['Product ID'].nunique()}\")\n",
-    "#print(f\"Number of Store-Product-Date combinations: {df[['Store ID', 'Product ID', 'Date']].nunique()}\")\n",
     "print(f\"Product categories: {df['Category'].unique()}\")\n",
     "print(f\"Regions: {df['Region'].unique()}\")\n",
     "print(f\"Weather conditions: {df['Weather Condition'].unique()}\")\n",
-    "print(f\"Seasons: {df['Seasonality'].unique()}\")"
+    "print(f\"Seasons: {df['Seasonality'].unique()}\")\n",
+    "print(f\"Total sales volume: {df['Units Sold'].sum():,} units\")\n",
+    "print(f\"Average daily sales: {df['Units Sold'].mean():.1f} units per store-product\")\n",
+    "print(f\"Dataset shape: {df.shape}\")\n",
+    "print(f\"Memory usage: {df.memory_usage().sum()/1024**2:.2f} MB\")\n",
+    "print(f\"Column types:\\n{df.dtypes}\")"
    ]
   },
   {
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 257,
    "id": "030f070d",
    "metadata": {},
    "outputs": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 258,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 259,
    "id": "278323c6",
    "metadata": {},
    "outputs": [
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 260,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 261,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 262,
    "id": "653d5658",
    "metadata": {},
    "outputs": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 263,
    "id": "bb85aca1",
    "metadata": {},
    "outputs": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 264,
    "id": "19d05b32",
    "metadata": {},
    "outputs": [
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 265,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -555,9 +556,8 @@
        "      <th>Holiday/Promotion</th>\n",
        "      <th>Competitor Pricing</th>\n",
        "      <th>Seasonality</th>\n",
-       "      <th>Day_of_Week</th>\n",
-       "      <th>Month</th>\n",
        "      <th>Day of Week</th>\n",
+       "      <th>Month</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -580,7 +580,6 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -601,7 +600,6 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -622,7 +620,6 @@
        "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -643,7 +640,6 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -664,7 +660,6 @@
        "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -692,15 +687,15 @@
        "3            Cloudy                  1               34.74      Autumn   \n",
        "4             Sunny                  0               68.95      Summer   \n",
        "\n",
-       "  Day_of_Week    Month Day of Week  \n",
-       "0    Saturday  January    Saturday  \n",
-       "1    Saturday  January    Saturday  \n",
-       "2    Saturday  January    Saturday  \n",
-       "3    Saturday  January    Saturday  \n",
-       "4    Saturday  January    Saturday  "
+       "  Day of Week    Month  \n",
+       "0    Saturday  January  \n",
+       "1    Saturday  January  \n",
+       "2    Saturday  January  \n",
+       "3    Saturday  January  \n",
+       "4    Saturday  January  "
       ]
      },
-     "execution_count": 181,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
