Added seasonality inspection to month analysis

--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 267,
    "id": "7b13ef00",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 268,
    "id": "c3319c46",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 269,
    "id": "11c6dc57",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 270,
    "id": "86fe0696",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 271,
    "id": "030f070d",
    "metadata": {},
    "outputs": [
@@ -176,12 +176,12 @@
    "id": "c6b0fd22",
    "metadata": {},
    "source": [
-    "## Sales analysis by day-of-the-week"
+    "## Day-of-the-week analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 272,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -236,12 +236,12 @@
    "id": "4d0b48be",
    "metadata": {},
    "source": [
-    "## Sales analysis by month"
+    "## Month analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 281,
    "id": "278323c6",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,23 @@
       "September  816971  136.16\n",
       "October    852509  137.50\n",
       "November   830661  138.44\n",
-      "December   830993  134.03\n"
+      "December   830993  134.03\n",
+      "\n",
+      "Seasonality by Month:\n",
+      "Seasonality  Autumn  Spring  Summer  Winter\n",
+      "Month                                      \n",
+      "January        1574    1565    1562    1599\n",
+      "February       1439    1318    1464    1379\n",
+      "March          1517    1597    1563    1523\n",
+      "April          1496    1561    1447    1496\n",
+      "May            1579    1533    1526    1562\n",
+      "June           1496    1522    1518    1464\n",
+      "July           1540    1525    1596    1539\n",
+      "August         1478    1487    1560    1675\n",
+      "September      1506    1535    1505    1454\n",
+      "October        1502    1578    1578    1542\n",
+      "November       1500    1500    1483    1517\n",
+      "December       1566    1596    1503    1535\n"
      ]
     }
    ],
@@ -292,14 +308,17 @@
     "print(f\"Unique months in dataset: {df['Date'].dt.to_period('M').nunique()}\")\n",
     "\n",
     "print(\"\\nRecords per month:\")\n",
-    "# Reorder by actual month order\n",
+    "# Reordering by actual month order\n",
     "print(df['Month'].value_counts().reindex(month_order))\n",
     "\n",
     "print(\"\\nTotal and average sales by month:\")  \n",
     "month_sales = df.groupby('Month')['Units Sold'].agg(['sum', 'mean']).round(2)\n",
-    "# Reorder by actual month order\n",
+    "# Reordering by actual month order\n",
     "month_sales = month_sales.reindex(month_order)\n",
-    "print(month_sales)\n"
+    "print(month_sales)\n",
+    "\n",
+    "print(\"\\nSeasonality by Month:\")\n",
+    "print(df.groupby(['Month', 'Seasonality']).size().unstack(fill_value=0).reindex(month_order))\n"
    ]
   },
   {
@@ -312,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 282,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -371,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 283,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -407,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 284,
    "id": "653d5658",
    "metadata": {},
    "outputs": [
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 285,
    "id": "bb85aca1",
    "metadata": {},
    "outputs": [
@@ -474,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 286,
    "id": "19d05b32",
    "metadata": {},
    "outputs": [
@@ -516,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 287,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -695,7 +714,7 @@
        "4    Saturday  January  "
       ]
      },
-     "execution_count": 265,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
