--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 288,
    "id": "7b13ef00",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 289,
    "id": "c3319c46",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 290,
    "id": "11c6dc57",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 291,
    "id": "86fe0696",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 292,
    "id": "030f070d",
    "metadata": {},
    "outputs": [
@@ -173,6 +173,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3732bfc8",
+   "metadata": {},
+   "source": [
+    "## Correlation analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "id": "c4ff452d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation with Units Sold:\n",
+      "Units Sold           1.000000\n",
+      "Demand Forecast      0.996853\n",
+      "Inventory Level      0.589995\n",
+      "Discount             0.002576\n",
+      "Price                0.001082\n",
+      "Holiday/Promotion   -0.000374\n",
+      "Name: Units Sold, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlation_matrix = df[['Units Sold', 'Inventory Level', 'Price', 'Discount', 'Demand Forecast', 'Holiday/Promotion']].corr()\n",
+    "print(\"Correlation with Units Sold:\")\n",
+    "print(correlation_matrix['Units Sold'].sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c6b0fd22",
    "metadata": {},
    "source": [
@@ -181,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 294,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -241,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 295,
    "id": "278323c6",
    "metadata": {},
    "outputs": [
@@ -331,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 296,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -390,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 297,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -426,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 298,
    "id": "653d5658",
    "metadata": {},
    "outputs": [
@@ -461,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 299,
    "id": "bb85aca1",
    "metadata": {},
    "outputs": [
@@ -493,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 300,
    "id": "19d05b32",
    "metadata": {},
    "outputs": [
@@ -535,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 301,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -714,7 +749,7 @@
        "4    Saturday  January  "
       ]
      },
-     "execution_count": 287,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
