--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 311,
    "id": "c4ff452d",
    "metadata": {},
    "outputs": [
@@ -196,14 +196,49 @@
       "Discount             0.002576\n",
       "Price                0.001082\n",
       "Holiday/Promotion   -0.000374\n",
-      "Name: Units Sold, dtype: float64\n"
+      "Name: Units Sold, dtype: float64\n",
+      "\n",
+      "Price vs Sales correlation by category:\n",
+      "Groceries: 0.01002\n",
+      "Toys: 0.00244\n",
+      "Electronics: 0.00015\n",
+      "Furniture: -0.00523\n",
+      "Clothing: -0.00184\n"
      ]
     }
    ],
    "source": [
     "correlation_matrix = df[['Units Sold', 'Inventory Level', 'Price', 'Discount', 'Demand Forecast', 'Holiday/Promotion']].corr()\n",
     "print(\"Correlation with Units Sold:\")\n",
-    "print(correlation_matrix['Units Sold'].sort_values(ascending=False))"
+    "print(correlation_matrix['Units Sold'].sort_values(ascending=False))\n",
+    "\n",
+    "print(\"\\nPrice vs Sales correlation by category:\")\n",
+    "for category in df['Category'].unique():\n",
+    "    cat_data = df[df['Category'] == category]\n",
+    "    corr = cat_data['Price'].corr(cat_data['Units Sold'])\n",
+    "    print(f\"{category}: {corr:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1028cba6",
+   "metadata": {},
+   "source": [
+    "### There are a few issues with this dataset: \n",
+    "Units Sold vs Demand Forecast:\n",
+    "A correlation of 99.7% suggests the \"Demand Forecast\" column might actually be derived FROM the Units Sold data rather than being a true predictive forecast.\n",
+    "\n",
+    "Price Correlations Near Zero:\n",
+    "All price-sales correlations are essentially zero (-0.005 to 0.01). This is unrealistic, as price should have some relationship with demand, even if complex. \n",
+    "This suggests either:\n",
+    "- Price data is synthetic and randomly generated\n",
+    "- There's no price elasticity built into the dataset\n",
+    "- Price variations are too small to matter\n",
+    "\n",
+    "#### What this means for the project:\n",
+    "- Can't use Demand Forecasting as a feature: it's essentially cheating since it's too perfectly correlated\n",
+    "- There is no predictive value to price-based features\n",
+    "- Time-based and external factors must be focused on instead"
    ]
   },
   {
@@ -216,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 312,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -276,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 313,
    "id": "278323c6",
    "metadata": {},
    "outputs": [
@@ -366,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 314,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -425,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 315,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -461,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 316,
    "id": "653d5658",
    "metadata": {},
    "outputs": [
@@ -496,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 317,
    "id": "bb85aca1",
    "metadata": {},
    "outputs": [
@@ -528,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 318,
    "id": "19d05b32",
    "metadata": {},
    "outputs": [
@@ -570,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 319,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -749,7 +784,7 @@
        "4    Saturday  January  "
       ]
      },
-     "execution_count": 301,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
