--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -393,6 +393,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ec1128c",
+   "metadata": {},
+   "source": [
+    "### The seasonality data is completely wrong:\n",
+    "- Random seasonal assignments across all months\n",
+    "- Nearly equal distribution (1500 records each season per month)\n",
+    "\n",
+    "This suggests the seasonality column was randomly assigned rather than logically determined. This is a significant data quality issue, but can be fixed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20a0d1a",
+   "metadata": {},
+   "source": [
+    "## Fixing the seasonality issue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "id": "6c130334",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Seasonality by Month:\n",
+      "Seasonality Fixed  Autumn  Spring  Summer  Winter\n",
+      "Month                                            \n",
+      "January                 0       0       0    6300\n",
+      "February                0       0       0    5600\n",
+      "March                   0    6200       0       0\n",
+      "April                   0    6000       0       0\n",
+      "May                     0    6200       0       0\n",
+      "June                    0       0    6000       0\n",
+      "July                    0       0    6200       0\n",
+      "August                  0       0    6200       0\n",
+      "September            6000       0       0       0\n",
+      "October              6200       0       0       0\n",
+      "November             6000       0       0       0\n",
+      "December                0       0       0    6200\n"
+     ]
+    }
+   ],
+   "source": [
+    "def assign_proper_seasons(month):\n",
+    "    if month in [12, 1, 2]:\n",
+    "        return 'Winter'\n",
+    "    elif month in [3, 4, 5]:\n",
+    "        return 'Spring'\n",
+    "    elif month in [6, 7, 8]:\n",
+    "        return 'Summer'\n",
+    "    else:  # [9, 10, 11]\n",
+    "        return 'Autumn'\n",
+    "\n",
+    "df['Seasonality Fixed'] = df['Date'].dt.month.map(assign_proper_seasons)\n",
+    "\n",
+    "print(\"\\nSeasonality by Month:\")\n",
+    "print(df.groupby(['Month', 'Seasonality Fixed']).size().unstack(fill_value=0).reindex(month_order))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e915a121",
    "metadata": {},
    "source": [
@@ -401,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 328,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -460,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 329,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -496,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 330,
    "id": "653d5658",
    "metadata": {},
    "outputs": [
@@ -531,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 331,
    "id": "bb85aca1",
    "metadata": {},
    "outputs": [
@@ -563,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 332,
    "id": "19d05b32",
    "metadata": {},
    "outputs": [
@@ -605,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 333,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -647,6 +713,8 @@
        "      <th>Seasonality</th>\n",
        "      <th>Day of Week</th>\n",
        "      <th>Month</th>\n",
+       "      <th>Seasonality_Fixed</th>\n",
+       "      <th>Seasonality Fixed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -669,6 +737,8 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -689,6 +759,8 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -709,6 +781,8 @@
        "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -729,6 +803,8 @@
        "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -749,6 +825,8 @@
        "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Winter</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -776,15 +854,15 @@
        "3            Cloudy                  1               34.74      Autumn   \n",
        "4             Sunny                  0               68.95      Summer   \n",
        "\n",
-       "  Day of Week    Month  \n",
-       "0    Saturday  January  \n",
-       "1    Saturday  January  \n",
-       "2    Saturday  January  \n",
-       "3    Saturday  January  \n",
-       "4    Saturday  January  "
+       "  Day of Week    Month Seasonality_Fixed Seasonality Fixed  \n",
+       "0    Saturday  January            Winter            Winter  \n",
+       "1    Saturday  January            Winter            Winter  \n",
+       "2    Saturday  January            Winter            Winter  \n",
+       "3    Saturday  January            Winter            Winter  \n",
+       "4    Saturday  January            Winter            Winter  "
       ]
      },
-     "execution_count": 319,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
